--- a/src/main/resources/templates/catList.html
+++ b/src/main/resources/templates/catList.html
@@ -77,10 +77,10 @@
         </button>
       </div>
       <div class="modal-body">
-         <!-- <div class="form-group">
+          <div class="form-group">
             <label for="petId" class="col-form-label">PetId:</label>
             <input type="text" class="form-control" id="petId" name="petId" value=""/>
-          </div> -->
+          </div>
           <div class="form-group">
             <label for="name" class="col-form-label">Name:</label>
             <input type="text" class="form-control" id="name" name="name" value=""/>
